Terminar el encabezado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="container">
-            <div class="row justify-content-centent aling-items-center">
+            <div class="row justify-content-between aling-items-center">
                 <div class="col-auto">
                     <h1>MyOrdenNow</h1>
                 </div>
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <div class="modal fade" id="profileOptions" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade profile-options-modal" id="profileOptions" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -35,7 +35,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <ul class="profile-option-list">
+                        <ul class="profile-options-list">
                             <li>
                                 <a href="#"><i class="fas fa-user"></i>Mi perfil</a>
                             </li>
